--- a/styles_profile.css
+++ b/styles_profile.css
@@ -34,7 +34,7 @@ h5{
   text-align: left;
   padding: 10px;
   color: #14FFAD;
-  background-color: #F7F7F7;
+  background-color: #00BFA5;
 }
 
 .misc{
